Bug 762413 - Fix regression where the user couldn't edit outside of the plaintext signature node under certain circumstances. r=bienvenu.